--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Calculator</title>
-  <link rel="stylesheet" href="./a.css">
+  <link rel="stylesheet" href="./cal.css">
 </head>
 
 <body>
